Corrigir extensão das imagens

--- a/index.html
+++ b/index.html
@@ -105,17 +105,17 @@
 
         <div class="grid grid--3">
           <article class="card">
-            <img src="images/water-treatment.jpg" alt="Estação de tratamento de água" class="card__image">
+            <img src="images/water-treatment.jpeg" alt="Estação de tratamento de água" class="card__image">
             <h3>Parcerias e exclusividade</h3>
             <p>Representação exclusiva do Sudfloc (AECI Water — África do Sul) para o mercado angolano.</p>
           </article>
           <article class="card">
-            <img src="images/chlorine-product.jpg" alt="Produtos químicos para tratamento de água" class="card__image">
+            <img src="images/chlorine-product.jpeg" alt="Produtos químicos para tratamento de água" class="card__image">
             <h3>Produtos para água potável</h3>
             <p>Sudfloc, cloro granulado e pastilhas, cal e outros químicos conforme a necessidade do processo.</p>
           </article>
           <article class="card">
-            <img src="images/laboratory.jpg" alt="Testes de laboratório para análise de qualidade da água" class="card__image">
+            <img src="images/laboratory.jpeg" alt="Testes de laboratório para análise de qualidade da água" class="card__image">
             <h3>Testes de laboratório</h3>
             <p>Realizamos testes de qualidade da água para indicar o tipo de Sudfloc ideal e otimizar a dosagem dos produtos.</p>
           </article>
